[package]
name = "solar-sailer"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { version = "0.27.0", features = ["mint"] }
mint = "0.5.9"
tokio = { version = "1.32.0", features = ["rt", "tokio-macros", "sync"] }
tracing = "0.1.41"
tokio-stream = "0.1.17"
tracing-subscriber = { version = "0.3.19", features = ["tracing"] }

[dependencies.stardust-xr-fusion]
git = "https://github.com/StardustXR/core.git"
branch = "dev"

[dependencies.stardust-xr-molecules]
git = "https://github.com/StardustXR/molecules.git"
branch = "dev"

[dependencies.libmonado]
git = "https://github.com/technobaboo/libmonado-rs.git"
