[package]
name = "solar-sailer"
version = "0.50.0"
edition = "2024"

[dependencies]
glam = { version = "0.27.0", features = ["mint"] }
mint = "0.5.9"
tokio = { version = "1.32.0", features = ["rt", "tokio-macros", "sync"] }
tracing = "0.1.41"
tokio-stream = "0.1.17"
tracing-subscriber = { version = "0.3.19", features = ["tracing"] }
# stardust-xr-fusion = "0.50.0"
# stardust-xr-molecules = "0.50.0"

[dependencies.stardust-xr-fusion]
git = "https://github.com/StardustXR/core.git"

[dependencies.stardust-xr-molecules]
git = "https://github.com/StardustXR/molecules.git"

[dependencies.libmonado]
git = "https://github.com/technobaboo/libmonado-rs.git"
